// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders with entities 1`] = `
<Panel
  focus={true}
  instanceName="status-view"
  visible={true}
>
  <div
    className="status-view__content"
  >
    <div
      key="model"
    >
      <div
        className="twelve-col no-margin-bottom"
      >
        <div
          className="eight-col"
        >
          <h2>
            my-model
            <span
              className="status-view__traffic-light status-view__traffic-light--ok"
              onClick={[Function]}
              role="button"
              tabIndex="0"
              title="Everything is ok"
            />
          </h2>
        </div>
        <div
          className="status-view__filter-label two-col"
        >
          Filter status:
        </div>
        <div
          className="status-view__filter two-col last-col"
        >
          <select
            className="status-view__filter-select"
            onChange={[Function]}
            value="none"
          >
            <option
              className="status-view__filter-option"
              key="none"
              value="none"
            >
              none
            </option>
            <option
              className="status-view__filter-option"
              key="error"
              value="error"
            >
              error
            </option>
            <option
              className="status-view__filter-option"
              key="pending"
              value="pending"
            >
              pending
            </option>
            <option
              className="status-view__filter-option"
              key="ok"
              value="ok"
            >
              ok
            </option>
          </select>
        </div>
      </div>
      <BasicTable
        headers={
          Array [
            Object {
              "columnSize": 2,
              "content": "Cloud/Region",
            },
            Object {
              "columnSize": 2,
              "content": "Version",
            },
            Object {
              "columnSize": 1,
              "content": "SLA",
            },
            Object {
              "columnSize": 2,
              "content": "Applications",
            },
            Object {
              "columnSize": 2,
              "content": "Remote applications",
            },
            Object {
              "columnSize": 1,
              "content": "Units",
            },
            Object {
              "columnSize": 1,
              "content": "Machines",
            },
            Object {
              "columnSize": 1,
              "content": "Relations",
            },
          ]
        }
        rows={
          Array [
            Object {
              "columns": Array [
                Object {
                  "columnSize": 2,
                  "content": "aws/neutral zone",
                },
                Object {
                  "columnSize": 2,
                  "content": "2.42.47",
                },
                Object {
                  "columnSize": 1,
                  "content": "advanced",
                },
                Object {
                  "columnSize": 2,
                  "content": 1,
                },
                Object {
                  "columnSize": 2,
                  "content": 0,
                },
                Object {
                  "columnSize": 1,
                  "content": 1,
                },
                Object {
                  "columnSize": 1,
                  "content": 1,
                },
                Object {
                  "columnSize": 1,
                  "content": 1,
                },
              ],
              "key": "model",
            },
          ]
        }
      />
    </div>
    <StatusApplicationList
      applications={
        Array [
          Object {},
        ]
      }
      changeState={[Function]}
      generateApplicationClickState={[Function]}
      generateCharmURL={[Function]}
      generatePath={[Function]}
      key="applications"
      onCharmClick={[Function]}
      statusFilter={null}
    />
    <StatusUnitList
      applications={
        Object {
          "filter": [Function],
          "getById": [Function],
          "toArray": [Function],
        }
      }
      changeState={[Function]}
      generateMachineURL={[Function]}
      generatePath={[Function]}
      generateUnitClickState={[Function]}
      key="units"
      onMachineClick={[Function]}
      statusFilter={null}
      units={
        Array [
          Object {},
        ]
      }
    />
    <StatusMachineList
      changeState={[Function]}
      generateMachineClickState={[Function]}
      generatePath={[Function]}
      key="machines"
      machines={
        Array [
          Object {},
        ]
      }
      statusFilter={null}
    />
    <StatusRelationList
      applications={
        Object {
          "filter": [Function],
          "getById": [Function],
          "toArray": [Function],
        }
      }
      changeState={[Function]}
      generateApplicationURL={[Function]}
      generatePath={[Function]}
      key="relations"
      onApplicationClick={[Function]}
      relations={
        Array [
          Object {},
        ]
      }
      statusFilter={null}
    />
  </div>
</Panel>
`;

exports[`Status renders with no entities 1`] = `
<Panel
  focus={true}
  instanceName="status-view"
  visible={true}
>
  <div
    className="status-view__content"
  >
    <div
      key="model"
    >
      <div
        className="twelve-col no-margin-bottom"
      >
        <div
          className="eight-col"
        >
          <h2>
            my-model
            <span
              className="status-view__traffic-light status-view__traffic-light--ok"
              onClick={[Function]}
              role="button"
              tabIndex="0"
              title="Everything is ok"
            />
          </h2>
        </div>
        <div
          className="status-view__filter-label two-col"
        >
          Filter status:
        </div>
        <div
          className="status-view__filter two-col last-col"
        >
          <select
            className="status-view__filter-select"
            onChange={[Function]}
            value="none"
          >
            <option
              className="status-view__filter-option"
              key="none"
              value="none"
            >
              none
            </option>
            <option
              className="status-view__filter-option"
              key="error"
              value="error"
            >
              error
            </option>
            <option
              className="status-view__filter-option"
              key="pending"
              value="pending"
            >
              pending
            </option>
            <option
              className="status-view__filter-option"
              key="ok"
              value="ok"
            >
              ok
            </option>
          </select>
        </div>
      </div>
      <BasicTable
        headers={
          Array [
            Object {
              "columnSize": 2,
              "content": "Cloud/Region",
            },
            Object {
              "columnSize": 2,
              "content": "Version",
            },
            Object {
              "columnSize": 1,
              "content": "SLA",
            },
            Object {
              "columnSize": 2,
              "content": "Applications",
            },
            Object {
              "columnSize": 2,
              "content": "Remote applications",
            },
            Object {
              "columnSize": 1,
              "content": "Units",
            },
            Object {
              "columnSize": 1,
              "content": "Machines",
            },
            Object {
              "columnSize": 1,
              "content": "Relations",
            },
          ]
        }
        rows={
          Array [
            Object {
              "columns": Array [
                Object {
                  "columnSize": 2,
                  "content": "aws/neutral zone",
                },
                Object {
                  "columnSize": 2,
                  "content": "2.42.47",
                },
                Object {
                  "columnSize": 1,
                  "content": "advanced",
                },
                Object {
                  "columnSize": 2,
                  "content": 0,
                },
                Object {
                  "columnSize": 2,
                  "content": 0,
                },
                Object {
                  "columnSize": 1,
                  "content": 0,
                },
                Object {
                  "columnSize": 1,
                  "content": 0,
                },
                Object {
                  "columnSize": 1,
                  "content": 0,
                },
              ],
              "key": "model",
            },
          ]
        }
      />
    </div>
  </div>
</Panel>
`;
